@@ -16,11 +16,9 @@ import org.entur.vehicles.service.LineService;
 import org.entur.vehicles.service.ServiceJourneyService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.Duration;
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -29,10 +27,10 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class GraphQLTests {
 
-    @Autowired
     VehicleRepository repository;
 
     Query queryService;
+    private VehicleUpdateRxPublisher publisher = new VehicleUpdateRxPublisher();
 
     @BeforeEach
     public void initData() {
@@ -40,11 +38,12 @@ public class GraphQLTests {
         repository = new VehicleRepository(
                 metricsService,
                 new LineService(false),
-                new ServiceJourneyService(),
+                new ServiceJourneyService(false),
                 new AutoPurgingMap(Duration.parse("PT5S"), Duration.parse("PT5M")),
-                        180
+                        180,
+                publisher
         );
-        repository.addUpdateListener(new VehicleUpdateRxPublisher(repository));
+        publisher = new VehicleUpdateRxPublisher();
         queryService = new Query(repository, metricsService);
 
         VehicleActivityRecord vehicleActivityRecord = new VehicleActivityRecord();
@@ -69,7 +68,7 @@ public class GraphQLTests {
 
         vehicleActivityRecord.setMonitoredVehicleJourney(monitoredVehicleJourney);
 
-        repository.addAll(Arrays.asList(vehicleActivityRecord));
+        repository.addAll(List.of(vehicleActivityRecord));
     }
 
     @Test
